--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                                 <div class="user__avatar"></div> 
                                 <div class="user__name">Имя</div>  
                                 <div class="user__basket">
-                                    <div class="basket__logo"><a target="_blank" href="https://icons8.com/icon/85080/shopping-cart"></a><a target="_blank" href="https://icons8.com"></a></div>
                                     <div class="basket__price">Сумма корзины</div>
+                                    <a target="_blank" href="https://icons8.com/icon/85080/shopping-cart"><div class="basket__logo"></div></a>
+                                   
                                 </div> 
                             </div>
                         </div>
