--- a/index.html
+++ b/index.html
@@ -41,9 +41,24 @@
             <aside class="sidebar">
                 <div class="sidebar__content">
                     <nav class="sidebar__links">
-                        <a href="" class="link">Calven Klein</a>
-                        <a href="" class="link">Fila</a>
-                        <a href="" class="link">Lacoste</a>
+                        <ul class="nav__list first-level-ul">
+                            <li class="first-level-li"><a href="" class="link middle-text first-level .text-center">Трусы</a>
+                                <ul class="second-level-ul ">
+                                    <li><a href="" class="link second-level-li">Calven Klein</a></li>           
+                                    <li><a href="" class="link second-level-li">Fila</a></li>
+                                    <li><a href="" class="link second-level-li">Lacoste</a></li>
+                                </ul>
+                            </li>
+                    </ul>
+                    <ul class="nav__list first-level-ul">
+                        <li class="first-level-li"><a href="" class="link middle-text first-level .text-center">Еще список</a>
+                            <ul class="second-level-ul ">
+                                <li><a href="" class="link second-level-li">Calven Klein</a></li>           
+                                <li><a href="" class="link second-level-li">Fila</a></li>
+                                <li><a href="" class="link second-level-li">Lacoste</a></li>
+                            </ul>
+                        </li>
+                </ul>
                     </nav>
                 </div>
             </aside>
@@ -51,77 +66,110 @@
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content">
                         <div class="item__header">Calven Klein</div> 
-                        <div class="item_image"><div class="calveb-klein"></div></div>
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
                         <div class="item__text">
-                            <div class="item__description">5 цветов</div>
-                            <div class="item__price">1000</div>
-                            <div class="item__button"><a>Купить</a></div> 
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__content">
+                        <div class="item__header">Calven Klein</div> 
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
+                        <div class="item__text">
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__content">
+                        <div class="item__header">Calven Klein</div> 
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
+                        <div class="item__text">
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__content">
+                        <div class="item__header">Calven Klein</div> 
+                        <div class="item_image"><div class="calveb-klein img"></div></div>
+                        <div class="item__text">
+                            <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
+                            <div class="item__price"><span>Цена:</span>1000 &#8381</div>
+                            <div class="item__button"><button class="button">Купить</button></div> 
                         </div>
                     </div>
                 </div>
