--- a/index.html
+++ b/index.html
@@ -42,21 +42,17 @@
                 <div class="sidebar__content">
                     <nav class="sidebar__links">
                         <ul class="nav__list first-level-ul">
-                            <li class="first-level-li"><a href="" class="link middle-text first-level .text-center">Трусы</a>
-                                <ul class="second-level-ul ">
-                                    <li><a href="" class="link second-level-li">Calven Klein</a></li>           
-                                    <li><a href="" class="link second-level-li">Fila</a></li>
-                                    <li><a href="" class="link second-level-li">Lacoste</a></li>
-                                </ul>
+                            <li class="first-level-li"><a href="" class="link middle-text text-center">Трусы</a>
+                                <li class="second-level-li"><a href="" class="link" >Calven Klein</a></li>           
+                                <li class="second-level-li"><a href="" class="link">Fila</a></li>
+                                <li class="second-level-li"><a href="" class="link">Lacoste</a></li>
                             </li>
                     </ul>
                     <ul class="nav__list first-level-ul">
-                        <li class="first-level-li"><a href="" class="link middle-text first-level .text-center">Еще список</a>
-                            <ul class="second-level-ul ">
-                                <li><a href="" class="link second-level-li">Calven Klein</a></li>           
-                                <li><a href="" class="link second-level-li">Fila</a></li>
-                                <li><a href="" class="link second-level-li">Lacoste</a></li>
-                            </ul>
+                        <li class="first-level-li"><a href="" class="link middle-text first-level text-center">Еще список</a>
+                            <li class="second-level-li"><a href="" class="link">Товар</a></li>           
+                            <li class="second-level-li"><a href="" class="link">Товар</a></li>
+                            <li class="second-level-li"><a href="" class="link">Товар</a></li>
                         </li>
                 </ul>
                     </nav>
