--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 <div class="user__avatar"></div> 
                                 <div class="user__name">Имя</div>  
                                 <div class="user__basket">
-                                    <div class="basket__price">Сумма корзины</div>
+                                    <div class="basket__price">Сумма корзины &#8381</div>
                                     <a target="_blank" href="https://icons8.com/icon/85080/shopping-cart"><div class="basket__logo"></div></a>
                                    
                                 </div> 
