--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <div class="user__basket">
                                     <div class="basket__price">Сумма корзины <span>0</span> &#8381</div>
                                     <a target="_blank" href="https://icons8.com/icon/85080/shopping-cart"><div class="basket__logo"></div></a>
-                                   
+                                   <div class="user-login">Войти</div>
                                 </div> 
                             </div>
                         </div>
@@ -156,6 +156,7 @@
                                 <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
                                 <div class="item__price"><span>Цена:</span>1000 &#8381</div>
                                 <div class="item__button"><button class="button">Купить</button></div> 
+                    
                         </div>
                     </li>
                     <li class="item">
