--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                                 <div class="user__avatar"></div> 
                                 <div class="user__name">Имя</div>  
                                 <div class="user__basket">
-                                    <div class="basket__price">Сумма корзины <span>0</span> &#8381</div>
+                                    <div class="basket__price">Сумма корзины <span >0</span> &#8381</div>
+                                    <label class="basket__count">0</label>
                                     <a target="_blank" href="https://icons8.com/icon/85080/shopping-cart"><div class="basket__logo"></div></a>
-                                   <div class="user-login">Войти</div>
+                                   <button class="user-login button">Войти</button>
                                 </div> 
                             </div>
                         </div>
@@ -162,7 +163,7 @@
                     <li class="item">
                         <div class="item__container">
                             <h3 class="item__header">Calven Klein</h3>
-                                <div class="item_image"><div class="calven-klein img"></div>
+                                <div class="item_image"><div class="calven-4 img"></div>
                                 </div>
                                 <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
                                 <div class="item__price"><span>Цена:</span>1000 &#8381</div>
@@ -171,8 +172,8 @@
                     </li>
                     <li class="item">
                         <div class="item__container">
-                            <h3 class="item__header">Calven Klein</h3>
-                                <div class="item_image"><div class="calven-klein img"></div>
+                            <h3 class="item__header">Louis Vuitton</h3>
+                                <div class="item_image"><div class="lvt-2 img"></div>
                                 </div>
                                 <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
                                 <div class="item__price"><span>Цена:</span>1000 &#8381</div>
