--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
                         <div class="logo">
                         </div>
                         <div class="user">
-                            <div class="user__column">
-                                <div class="user__avatar"></div> 
-                                <div class="user__name">Имя</div>  
-                                <div class="user__basket">
-                                    <div class="basket__price">Сумма корзины <span >0</span> &#8381</div>
+                            <div class="user__row">
+                                <div class="user__avatar user__column"></div> 
+                                <div class="user__name user__column">Имя</div>  
+                                <div class="user__basket user__column">
+                                    
                                     <label class="basket__count">0</label>
                                     <a target="_blank" href="https://icons8.com/icon/85080/shopping-cart"><div class="basket__logo"></div></a>
-                                   <button class="user-login button">Войти</button>
+                                   
                                 </div> 
+                                <div class="basket__price">Сумма корзины <span >0</span> &#8381</div>
+                                <button class="user-login user__column">Войти</button>
                             </div>
                         </div>
                     </div> 
