--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                     </li>
                     <li class="item">
                         <div class="item__container">
-                            <h3 class="item__header">Calven Klein</h3>
-                                <div class="item_image"><div class="calven-klein img"></div>
+                            <h3 class="item__header">Lacoste</h3>
+                                <div class="item_image"><div class="lacoste-1 img"></div>
                                 </div>
                                 <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
                                 <div class="item__price"><span>Цена:</span>1000 &#8381</div>
@@ -195,7 +195,7 @@
                     <li class="item">
                         <div class="item__container">
                             <h3 class="item__header">Calven Klein</h3>
-                                <div class="item_image"><div class="calven-klein img"></div>
+                                <div class="item_image"><div class="ck-2 img"></div>
                                 </div>
                                 <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
                                 <div class="item__price"><span>Цена:</span>1000 &#8381</div>
@@ -204,8 +204,8 @@
                     </li>
                     <li class="item">
                         <div class="item__container">
-                            <h3 class="item__header">Calven Klein</h3>
-                                <div class="item_image"><div class="calven-klein img"></div>
+                            <h3 class="item__header">Fila</h3>
+                                <div class="item_image"><div class="fila img"></div>
                                 </div>
                                 <div class="item__description">Описание:комплект из 5 штук разных цветов</div>
                                 <div class="item__price"><span>Цена:</span>1000 &#8381</div>
